@@ -151,4 +151,11 @@ ruri -l memory=1M -l cpuset=1 /test
 ```
 -w, --no-warnings ...........................: 禁用警告
 ```
-运行ruri时可能会出现一些警告，可以使用`-w`选项来禁用它们。  
+运行ruri时可能会出现一些警告，可以使用`-w`选项来禁用它们。         
+********************************************
+```
+-f, --fork .............................:在执行命令前fork()一次
+```
+ruri会设置进程名为ruri，但在exec()后此进程名可能失效。      
+unshare容器和rootless容器会始终在执行命令前fork()自身一次，     
+使用此选项使普通chroot容器拥有相同行为，然后您可通过父进程ruri检索容器进程。     
